# PandL

./: .gitignore  CMakeLists.txt  gen_win32.bat  gen_win32Manual.bat
source/: CMakeLists.txt  Main.cpp
